# jellyfish-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
.github/ISSUE_TEMPLATE/: the-issue-template.md
src/: buffer.rs  calc.rs  color.rs  config.rs  constants.rs  event_loop.rs  main.rs  render.rs  term.rs
src/channel_storage/: mod.rs
src/color/: color_ops.rs  mod.rs
src/config/: mod.rs
src/engine/: channel.rs  mod.rs
src/gui/: mod.rs
src/renderer/: mod.rs
src/term/: mod.rs
src/user_interface/: app.rs  mod.rs
