[package]
name = "jellyfish-rs"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"
neobridge-rust = "0.1.8"
screenshots = "0.8.10"
eframe = "0.27.2"
egui_extras = "0.27.2"
image = "0.24.2"

[profile.release]
lto = true
opt-level = 3

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "color_benchmark"
harness = false

[build-dependencies]
winresource = "0.1.17"
