[package]
name = "jellyfish-rs"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "*"
neobridge-rust = "0.1.8"
screenshots = "0.8.10"
eframe = {version = "0.27.2", features = ["persistence"]}
egui_extras = "0.27.2"
image = "0.24.2"
serde_json = "1.0.117"
serde = "*"

[profile.release]
lto = true
opt-level = 3

[build-dependencies]
winresource = "0.1.17"
